tic tac toe start

--- a/Tic Tac Toe/Tic Tac Toe Graphics/Tic Tac Toe Graphics/Tic Tac Toe Graphics.vcxproj
+++ b/Tic Tac Toe/Tic Tac Toe Graphics/Tic Tac Toe Graphics/Tic Tac Toe Graphics.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{0b5df001-23d3-4aad-b050-454ff8c8495b}</ProjectGuid>
+    <ProjectGuid>{78735cc6-1ef7-4001-8841-399ec30915c5}</ProjectGuid>
     <RootNamespace>TicTacToeGraphics</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -85,7 +85,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <SDLCheck>true</SDLCheck>
+      <SDLCheck>false</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
